# Chess_Sim

./: CMakeLists.txt  README.md
Chess_sim/: AI.cpp  AI.h  AI.hpp  BTrans.h  BitBoard.cpp  BitBoard.h  BitBoard.hpp  BoardRenderer.cpp  BoardRenderer.h  Button.cpp  Button.h  CMakeLists.txt  Chess_sim.cpp  Chess_sim.h  ESCMenu.cpp  ESCMenu.h  Entry.cpp  Entry.hpp  Game.cpp  Game.hpp  GameEnums.h  Init.cpp  Init.h  KingMasks.hpp  KnightMasks.hpp  LegalMoveGen.cpp  LegalMoveGen.h  LegalMoveGen.hpp  LegalMoveGenTester.cpp  LegalMoveGenTester.h  LegalMoveGenTester.hpp  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  MenuResult.h  Move.cpp  Move.h  Move.hpp  MoveList.cpp  (+35 more)
Chess_sim/src/: CMakeLists.txt  Timer.cpp  Timer.h
Chess_sim/src/Menus/: Menu.h  SettingsMenu.cpp  SettingsMenu.h
Chess_sim/src/Widgets/: Button.h
saves/: SAVE1.txt  SAVE2.txt  SAVE3.txt  load.txt  save.txt
x64-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake
x64-debug/.cmake/api/v1/reply/: cache-v2-fac16ffe93d3373684cd.json  cmakeFiles-v1-cbe8210b1e8a0904fdfd.json  codemodel-v2-2ed07354ac6a29f553c0.json  directory-Chess_sim-Debug-e07bdaaea056931cda37.json  directory-external.raylib.raylib-Debug-60360acf274b6865e60a.json  index-2025-05-27T14-02-19-0764.json  target-Chess_sim-Debug-e750b14d688989d82db0.json  target-glfw-Debug-4d2b2feb6394bee73362.json  target-raylib-Debug-a349e5d4f4bf6063b09a.json  target-uninstall-Debug-8a2a5fe2e83d5dad2bcc.json  target-update_mappings-Debug-7a5f5eb15a9a3d98807f.json
x64-debug/Chess_sim/: cmake_install.cmake
x64-debug/Chess_sim/recources/ChessPieces/: ChessPieces.rar
x64-debug/Chess_sim/recources/Start/: Start.txt
x64-debug/Chess_sim/saves/: SAVE1.txt  save.txt
